k8s/backapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp
  labels:
    app: backapp
    homework: backapp
    training: block3
spec:
  selector:
    app: backapp
    homework: backapp
    training: block3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
