k8s/frontapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontapp
  labels:
    app: frontapp
    homework: frontapp
    training: block3
spec:
  selector:
    app: frontapp
    homework: frontapp
    training: block3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
